--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>033-255-8879</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="naverBlog"><i class=""><img src="assets/img/naverblog.png" alt="네이버블로그"></i></a>
-        <a href="#" class="kakaotalk"><i class=""><img src="assets/img/kakaotalk.png" alt="카카오톡"></i></a>
-        <a href="#" class="instagram"><i class=""><img src="assets/img/instagram.png" alt="인스타그램"></i></a>
+        <a href="https://blog.naver.com/eden_9988" class="naverBlog"><i class=""><img src="assets/img/naverblog.png" alt="네이버블로그"></i></a>
+        <a href="http://pf.kakao.com/_DxiGxcxj" class="kakaotalk"><i class=""><img src="assets/img/kakaotalk.png" alt="카카오톡"></i></a>
+        <a href="https://instagram.com/1004.eden?igshid=ZDdkNTZiNTM=" class="instagram"><i class=""><img src="assets/img/instagram.png" alt="인스타그램"></i></a>
+        <a href="https://band.us/n/a1ae85j9S1X8n" class="naverBand"><i class=""><img src="assets/img/naverband.png" alt="네이버밴드"></i></a>
         <!--<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>-->
       </div>
     </div>
@@ -648,7 +649,7 @@
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/gal-9.jpeg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/gal-9.jpeg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">색연필 찾는중</a></h4>
+                  <h4><a href="portfolio-details.html" title="More Details">심리치료 프로그램</a></h4>
                   <!--<p>Lorem ipsum, dolor sit amet consectetur</p>-->
                 </div>
               </div>
@@ -678,7 +679,7 @@
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/gal-12.jpeg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/gal-12.jpeg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">블록 완성~!</a></h4>
+                  <h4><a href="portfolio-details.html" title="More Details">블록 완성!</a></h4>
                   <!--<p>Lorem ipsum, dolor sit amet consectetur</p>-->
                 </div>
               </div>
@@ -1161,9 +1162,10 @@
           <div class="social-links d-flex mt-4">
             <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>-->
-            <a href="#" class="naverBlog"><i class=""><img src="assets/img/naverblog.png" alt="네이버블로그"></i></a>
-            <a href="#" class="kakaotalk"><i class=""><img src="assets/img/kakaotalk.png" alt="카카오톡"></i></a>
-            <a href="#" class="instagram"><i class=""><img src="assets/img/instagram.png" alt="인스타그램"></i></a>
+            <a href="https://blog.naver.com/eden_9988" class="naverBlog"><i class=""><img src="assets/img/naverblog.png" alt="네이버블로그"></i></a>
+            <a href="http://pf.kakao.com/_DxiGxcxj" class="kakaotalk"><i class=""><img src="assets/img/kakaotalk.png" alt="카카오톡"></i></a>
+            <a href="https://instagram.com/1004.eden?igshid=ZDdkNTZiNTM=" class="instagram"><i class=""><img src="assets/img/instagram.png" alt="인스타그램"></i></a>
+            <a href="https://band.us/n/a1ae85j9S1X8n" class="naverBand"><i class=""><img src="assets/img/naverband.png" alt="네이버밴드"></i></a>
             <!--<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>-->
             <!--<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>-->
           </div>
